--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "simondotm",
+  "name": "@kgg/source",
   "version": "0.0.0",
   "license": "MIT",
-  "packageManager": "pnpm@8.15.5",
+  "packageManager": "pnpm@10.18.3",
   "scripts": {
     "preinstall": "npx only-allow pnpm",
     "postinstall": "node ./tools/generate-package-versions.js",
@@ -19,45 +19,45 @@
   },
   "private": true,
   "devDependencies": {
-    "@google-cloud/functions-framework": "^3.3.0",
-    "@nx/devkit": "16.8.1",
-    "@nx/eslint-plugin": "16.8.1",
-    "@nx/jest": "16.8.1",
-    "@nx/js": "16.8.1",
-    "@nx/linter": "16.8.1",
-    "@nx/node": "16.8.1",
-    "@nx/plugin": "16.8.1",
-    "@nx/webpack": "16.8.1",
-    "@nx/workspace": "16.8.1",
-    "@swc-node/register": "~1.4.2",
-    "@swc/core": "~1.3.51",
-    "@types/jest": "29.4.4",
-    "@types/node": "18.7.1",
-    "@types/semver": "^7.3.13",
-    "@typescript-eslint/eslint-plugin": "5.62.0",
-    "@typescript-eslint/parser": "5.62.0",
-    "eslint": "8.46.0",
-    "eslint-config-prettier": "8.1.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-unused-imports": "^2.0.0",
-    "firebase": "10.10.0",
-    "firebase-admin": "11.11.1",
-    "firebase-functions": "4.8.2",
-    "firebase-functions-test": "3.1.1",
-    "firebase-tools": "12.9.1",
-    "jest": "29.4.3",
-    "jest-environment-jsdom": "28.1.3",
+    "@google-cloud/functions-framework": "^4.0.0",
+    "@nx/devkit": "^21.6.4",
+    "@nx/eslint-plugin": "^21.6.4",
+    "@nx/jest": "^21.6.4",
+    "@nx/js": "^21.6.4",
+    "@nx/linter": "^19.8.4",
+    "@nx/node": "^21.6.4",
+    "@nx/plugin": "^21.6.4",
+    "@nx/webpack": "^21.6.4",
+    "@nx/workspace": "^21.6.4",
+    "@swc-node/register": "~1.11.1",
+    "@swc/core": "~1.13.5",
+    "@types/jest": "30.0.0",
+    "@types/node": "24.7.2",
+    "@types/semver": "^7.7.1",
+    "@typescript-eslint/eslint-plugin": "8.46.1",
+    "@typescript-eslint/parser": "8.46.1",
+    "eslint": "9.37.0",
+    "eslint-config-prettier": "10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-unused-imports": "^4.2.0",
+    "firebase": "12.4.0",
+    "firebase-admin": "13.5.0",
+    "firebase-functions": "6.5.0",
+    "firebase-functions-test": "3.4.1",
+    "firebase-tools": "14.19.1",
+    "jest": "30.2.0",
+    "jest-environment-jsdom": "30.2.0",
     "kill-port": "2.0.1",
-    "nx": "16.8.1",
+    "nx": "21.6.4",
     "only-allow": "^1.2.1",
-    "prettier": "2.8.8",
-    "semver": "^7.6.0",
-    "ts-jest": "29.1.0",
-    "ts-node": "10.9.1",
-    "tslib": "^2.0.0",
-    "typescript": "4.8.4"
+    "prettier": "3.6.2",
+    "semver": "^7.7.3",
+    "ts-jest": "29.4.5",
+    "ts-node": "10.9.2",
+    "tslib": "^2.8.1",
+    "typescript": "5.9.3"
   },
   "dependencies": {
-    "tslib": "^2.0.0"
+    "tslib": "^2.8.1"
   }
 }
