--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@simondotm/nx-firebase": ["packages/nx-firebase/src/index.ts"]
+      "@katsuhirogg/nx-firebase": ["packages/nx-firebase/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
