--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "postinstall": "node ./tools/generate-package-versions.js",
     "start": "nx serve",
     "build": "nx run nx-firebase:build",
-    "test": "nx run nx-firebase:test",
     "lint": "nx run nx-firebase:lint",
     "e2e": "nx run nx-firebase-e2e:e2e --silent=false --bail=true",
     "release": "cd packages/nx-firebase && npm version",
@@ -19,45 +18,43 @@
   },
   "private": true,
   "devDependencies": {
+    "@eslint/js": "^9.8.0",
     "@google-cloud/functions-framework": "^4.0.0",
-    "@nx/devkit": "^21.6.4",
-    "@nx/eslint-plugin": "^21.6.4",
-    "@nx/jest": "^21.6.4",
-    "@nx/js": "^21.6.4",
-    "@nx/linter": "^19.8.4",
-    "@nx/node": "^21.6.4",
-    "@nx/plugin": "^21.6.4",
-    "@nx/webpack": "^21.6.4",
-    "@nx/workspace": "^21.6.4",
-    "@swc-node/register": "~1.11.1",
-    "@swc/core": "~1.13.5",
-    "@types/jest": "30.0.0",
-    "@types/node": "24.7.2",
-    "@types/semver": "^7.7.1",
-    "@typescript-eslint/eslint-plugin": "8.46.1",
-    "@typescript-eslint/parser": "8.46.1",
-    "eslint": "9.37.0",
-    "eslint-config-prettier": "10.1.8",
-    "eslint-plugin-prettier": "^5.5.4",
-    "eslint-plugin-unused-imports": "^4.2.0",
+    "@nx/eslint": "21.6.2",
+    "@nx/eslint-plugin": "21.6.2",
+    "@nx/js": "21.6.2",
+    "@nx/node": "21.6.2",
+    "@nx/plugin": "21.6.2",
+    "@nx/webpack": "21.6.2",
+    "@nx/workspace": "21.6.2",
+    "@swc-node/register": "~1.9.1",
+    "@swc/cli": "~0.6.0",
+    "@swc/core": "~1.5.7",
+    "@swc/helpers": "~0.5.11",
+    "@types/node": "^24.7.2",
+    "eslint": "^9.8.0",
+    "eslint-config-prettier": "^10.0.0",
     "firebase": "12.4.0",
     "firebase-admin": "13.5.0",
     "firebase-functions": "6.5.0",
-    "firebase-functions-test": "3.4.1",
+    "firebase-functions-test": "3.1.1",
     "firebase-tools": "14.19.1",
-    "jest": "30.2.0",
-    "jest-environment-jsdom": "30.2.0",
+    "jsonc-eslint-parser": "^2.1.0",
     "kill-port": "2.0.1",
-    "nx": "21.6.4",
+    "nx": "21.6.2",
     "only-allow": "^1.2.1",
-    "prettier": "3.6.2",
-    "semver": "^7.7.3",
-    "ts-jest": "29.4.5",
     "ts-node": "10.9.2",
     "tslib": "^2.8.1",
-    "typescript": "5.9.3"
+    "typescript": "~5.9.2",
+    "typescript-eslint": "^8.40.0"
   },
   "dependencies": {
-    "tslib": "^2.8.1"
+    "@nx/devkit": "21.6.4"
+  },
+  "nx": {
+    "includedScripts": []
+  },
+  "volta": {
+    "node": "22.20.0"
   }
 }
