--- a/packages/nx-firebase/package.json
+++ b/packages/nx-firebase/package.json
@@ -21,9 +21,11 @@
   "generators": "./generators.json",
   "executors": "./executors.json",
   "peerDependencies": {
-    "@nx/devkit": ">= 21.5.1",
-    "@nx/workspace": ">= 21.5.1",
-    "nx": ">= 21.5.1"
+    "@nx/devkit": ">= 21.6.2",
+    "@nx/workspace": ">= 21.6.2",
+    "nx": ">= 21.6.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@nx/devkit": "*"
+  }
 }
